# async-txt-sorter

./: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix
src/: args.rs  lib.rs  main.rs  recursion.rs  slow.rs  standard.rs  utils.rs
src/sorting_strategy/: mod.rs
test/: correct.txt  text.txt
