[package]
name = "async-txt-sorter"
version = "0.1.0"
edition = "2021"
description = "Sort large text files quickly"
authors = ["Angelo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
log = "0.4.19"
rayon = "1.7.0"
simple_logger = "4.2.0"
tempfile = "3.7.0"
tokio = { version = "1.29.1", features = ["full"] }

[profile.release]
strip = true
lto = true
